--- a/admin.html
+++ b/admin.html
@@ -315,12 +315,12 @@
 
         // Firebase config - ASENDA NEED OMA VÄÄRTUSTEGA!
         const firebaseConfig = {
-            apiKey: "SINU-API-KEY",
-            authDomain: "SINU-PROJECT.firebaseapp.com",
-            projectId: "SINU-PROJECT-ID",
-            storageBucket: "SINU-PROJECT.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "SINU-APP-ID"
+            apiKey: "AIzaSyBdwjTXaL3kPlr2yRoHvcMJTR5LUZy0r5c",
+            authDomain: "katsetusakt-keraplast.firebaseapp.com",
+            projectId: "katsetusakt-keraplast",
+            storageBucket: "katsetusakt-keraplast.firebasestorage.app",
+            messagingSenderId: "138381752322",
+            appId: "1:138381752322:web:f73719b94dde4df669cf1b"
         };
 
         // Initialize Firebase
